# UdacityNanoDegree-SensorFusion

./: .gitattributes  .gitignore  README.md
Camera/: README.md
Camera/Lesson_2-Autonomous_Vehicles_and_Computer_Vision/The_OpenCV_Library/OpenCV_exercises/src/: change_pixels.cpp  create_matrix.cpp  load_image_1.cpp  load_image_3.cpp
Camera/Lesson_3-Engineering_a_Collision_Detection_System/Estimating_TTC_with_Camera/TTC_camera/src/: compute_ttc_camera.cpp
Camera/Lesson_4-Tracking_Image_Features/Intensity_Gradient_and_Filtering/gradient_filtering/: CMakeLists.txt
Camera/Lesson_5_Project-Camera_Based_2D_Feature_Tracking/: ComparisonFeaturePointPipeline.ods  README.md
Camera/Lesson_5_Project-Camera_Based_2D_Feature_Tracking/src/: MidTermProject_Camera_Student.cpp  dataStructures.h  matching2D.hpp  matching2D_Student.cpp
Camera/Project_3D_Object_Tracking/: PerformanceEvaluation.ods  README.md
Camera/Project_3D_Object_Tracking/src/: FinalProject_Camera.cpp  camFusion.hpp  camFusion_Student.cpp  dataStructures.h  lidarData.cpp  lidarData.hpp  matching2D.hpp  matching2D_Student.cpp  objectDetection2D.cpp  objectDetection2D.hpp
Lidar/: CMakeLists.txt  README.md
Lidar/src/: environment.cpp  processPointClouds.cpp  processPointClouds.h
Lidar/src/quiz/cluster/: CMakeLists.txt  CMakeLists.txt.in  cluster.cpp  cluster.h  cluster_test.cpp  kdtree.h  kdtree_test.cpp  main.cpp
Lidar/src/quiz/ransac/: CMakeLists.txt  main.cpp  ransac2d.cpp  ransac2d.h  ransac3d.cpp  ransac3d.h
Lidar/src/render/: render.cpp  render.h
Lidar/src/sensors/: lidar.h
Radar/: FFT_1D_Exercise.m  FFT_2D_Exercise.m  FinalProject.m  README.md
UnscentedKalmanFilter/: README.md
UnscentedKalmanFilter/src/: main.cpp  ukf.cpp  ukf.h
(+12 files in other folders)
